--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
   <title>Previsão do tempo</title>
 </head>
 <body>
   <div class="caixa-maior">
     <input class="input-cidade" placeholder="Digite o nome da cidade">
-    <button>Buscar</button>
+    <button class="botao-busca">
+      <img class="img-busca" src="https://www.svgrepo.com/show/488200/find.svg" alt="busca">
+    </button>
+  <div class="caixa-media">
+    <h2 class="cidade">Tempo em São Paulo</h2>
+    <p class="temp">21ºC</p>
 
-    <h2>Tempo em São Paulo</h2>
-    <p>21ºC</p>
-    <img src="https://openweathermap.org/img/wn/04n.png" alt="imagem do tempo"> <p>Nublado</p>
+    <div class="caixa-menor">
+      <img class="img-previsao" src="https://openweathermap.org/img/wn/04n.png" alt="imagem do tempo"> <p class="texto-previsao">Nublado</p>
+    </div>
 
-    <p>Umidade: 76%</p>
+    <p class="umidade">Umidade: 76%</p>
+    
   </div>
+</div>
 </body>
 </html>
